# orb

./: Cargo.toml  README.md  benchmark_results.txt  plan.txt
.cargo/: config.toml
orb-brief/: Cargo.toml  lib.rs
orb-cli/: Cargo.toml  balanced_template.json  custom_config.json  custom_config.toml  fast_config.json  fast_config.toml  lib.rs  main.rs  precision_template.json  quality_config.json  quality_config.toml  showcase_config.json  showcase_config.toml  ultra_fast_template.json
orb-cli/examples/: config_serialization_demo.rs  detector_builder_demo.rs  orb_showcase.rs
orb-core/: Cargo.toml  lib.rs
orb-fast/: Cargo.toml  builder.rs  config.rs  configured_detector.rs  corner_detection.rs  detector.rs  error.rs  lib.rs  preprocessing.rs  pyramid.rs  refinement.rs  simd.rs  types.rs  utils.rs
orb-fast/benches/: fast_benchmarks.rs
src_backup/: main.rs
