[package]
name = "orb-fast"
version = "0.1.0"
edition = "2021"
description = "FAST corner detection for ORB feature detection"
license = "MIT OR Apache-2.0"

[lib]
name = "orb_fast"
path = "lib.rs"

[dependencies]
orb-core = { path = "../orb-core" }
rayon = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "fast_benchmarks"
harness = false

[build]
target = "aarch64-linux-android"

[target.aarch64-linux-android]
rustflags = [
  "-Ctarget-cpu=native",
  "-Ctarget-feature=+neon"
]

[features]
default = ["simd", "optimized-memory-layout"]

# SIMD optimizations
simd = []
avx2 = ["simd"]
avx512 = ["simd", "avx2"]

# Memory layout optimizations
optimized-memory-layout = []
chunked-processing = ["optimized-memory-layout"]

# Experimental features (disabled by default)
integral-images = []
rolling-window-stats = []

# Debug features
debug-performance = []
debug-visualization = []

# Quality improvements
harris-corners = []
adaptive-thresholding = []
clahe-preprocessing = []

# All quality features combined
quality = ["harris-corners", "adaptive-thresholding", "clahe-preprocessing"] 